# noise-reactor

./: README.md  meson.build
.github/workflows/: release.yml
kaos/reactor/: app.cc
kaos_reactor/: app.cc  app.h  audio_analysis.h  audio_analyzer.cc  audio_analyzer.h  audio_file.cc  audio_file.h  audio_frame_data.h  cinematic_target_widget.cc  cinematic_target_widget.h  effect_params.h  main.cc  preview_widget.cc  preview_widget.h  waveform_widget.cc  waveform_widget.h
linux/: kaos-reactor.desktop  noise-reactor.desktop
noise_reactor/: app.cc  effect_params.h  main.cc  preview_widget.cc  preview_widget.h
shaders/: composite.frag  image.frag  shaders.qrc
